<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SYLAB</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_splash">Splash</string>

    <string name="error_when_no_file">Oops! Looks like we don\'t have that file yet. We will update it soon.</string>
    <string name="error_when_no_net">You haven't downloaded this file yet.</string>
    <string name="code">Source Code</string>
    <string name="developer">Developers</string>
    <string name="license">License</string>

    <string name="alias_faizaan">Aulisius.F</string>
    <string name="alias_harish">Ranguski</string>
    <string name="alias_karthi">Mac</string>

    <string name="aulisius">Mohammed Faizaan</string>
    <string name="ranguski">Harish Murali</string>
    <string name="mac">Karthick Ramjee</string>
    <string name="pdfView">Android-pdfView</string>
    <string name="roboto">Roboto</string>

    <string name="version">v1.0.2</string>

</resources>