<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:id="@+id/about">

        <ImageView
            android:id="@+id/imageButton"
            android:src="@drawable/github"
            android:contentDescription="Github"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_below="@+id/textView2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="28dp" />

        <TextView
            android:id="@+id/textView"
            android:text="@string/code"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imageButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/textView2"
            android:text="ABOUT US"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/textView3"
            android:text="DEVELOPERS PROFILE"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginTop="26dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageButton"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:id="@+id/imageButton1"
            android:src="@drawable/fb"
            android:layout_marginTop="37dp"
            android:layout_below="@+id/textView3"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:id="@+id/imageButton2"
            android:src="@drawable/fb"
            android:layout_below="@+id/imageButton1"
            android:layout_alignLeft="@+id/imageButton1"
            android:layout_alignStart="@+id/imageButton1" />

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:id="@+id/imageButton3"
            android:src="@drawable/fb"
            android:layout_below="@+id/imageButton2"
            android:layout_alignLeft="@+id/imageButton2"
            android:layout_alignStart="@+id/imageButton2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/mac"
            android:id="@+id/textView5"
            android:layout_below="@+id/imageButton2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/ranguski"
            android:id="@+id/textView6"
            android:layout_alignTop="@+id/imageButton2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/aulisius"
            android:id="@+id/textView4"
            android:layout_alignTop="@+id/imageButton1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/alias_faizaan"
            android:id="@+id/textView7"
            android:layout_below="@+id/textView4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/alias_harish"
            android:id="@+id/textView8"
            android:layout_below="@+id/textView6"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/alias_karthi"
            android:id="@+id/textView9"
            android:layout_below="@+id/textView5"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Open Source Licenses"
            android:textAllCaps="true"
            android:id="@+id/textView10"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/imageButton3"
            android:layout_toRightOf="@+id/textView7"
            android:layout_toEndOf="@+id/textView7"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/pdfView"
            android:id="@+id/textView11"
            android:layout_alignTop="@+id/imageView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:id="@+id/imageView"
            android:src="@drawable/github"
            android:layout_marginTop="26dp"
            android:layout_below="@+id/textView10"
            android:layout_alignLeft="@+id/imageButton"
            android:layout_alignStart="@+id/imageButton" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="License"
            android:id="@+id/textView12"
            android:layout_below="@+id/textView11"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="v1.0.2"
            android:id="@+id/textView13"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>
</ScrollView>